Update style and stop some wrapping

--- a/content/css/firehol.css
+++ b/content/css/firehol.css
@@ -70,3 +70,10 @@ dd {
   padding-top: 8px;
   padding-left: 16px;
 }
+
+pre {
+  font: 14px Consolas,"Liberation Mono",Menlo,Courier,monospace;
+  line-height: 1.45;
+  background-color: #F7F7F7;
+  border: none;
+}
